{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 35,
  "lineage": "373b120c-a424-4030-8282-9904658bfceb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089f034bd53ada473",
            "association_id": "eipassoc-053239c9aee13082d",
            "domain": "vpc",
            "id": "eipalloc-089f034bd53ada473",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b8ae6a40c0712a3f",
            "private_dns": "ip-10-0-1-221.ec2.internal",
            "private_ip": "10.0.1.221",
            "public_dns": "ec2-54-236-95-77.compute-1.amazonaws.com",
            "public_ip": "54.236.95.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "development-sandbox-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "development-sandbox-vpc-nat-gw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680995745880:internet-gateway/igw-04eff884514d0f567",
            "id": "igw-04eff884514d0f567",
            "owner_id": "680995745880",
            "tags": {
              "Name": "development-sandbox-vpc-igw"
            },
            "tags_all": {
              "Name": "development-sandbox-vpc-igw"
            },
            "vpc_id": "vpc-086853d8f46dbb8fb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089f034bd53ada473",
            "connectivity_type": "public",
            "id": "nat-08611ea42472e314a",
            "network_interface_id": "eni-0b8ae6a40c0712a3f",
            "private_ip": "10.0.1.221",
            "public_ip": "54.236.95.77",
            "subnet_id": "subnet-029ac78b2cd8bd343",
            "tags": {
              "Name": "development-sandbox-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "development-sandbox-vpc-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680995745880:route-table/rtb-04dd6f55153f9ccfc",
            "id": "rtb-04dd6f55153f9ccfc",
            "owner_id": "680995745880",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08611ea42472e314a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-sandbox-vpc-private-route"
            },
            "tags_all": {
              "Name": "development-sandbox-vpc-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-086853d8f46dbb8fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.aws_ng",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680995745880:route-table/rtb-09eda2bf0e82c2c2e",
            "id": "rtb-09eda2bf0e82c2c2e",
            "owner_id": "680995745880",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04eff884514d0f567",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-sandbox-vpc-public-route"
            },
            "tags_all": {
              "Name": "development-sandbox-vpc-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-086853d8f46dbb8fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws_igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subassocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eaa551085fb4d89",
            "route_table_id": "rtb-04dd6f55153f9ccfc",
            "subnet_id": "subnet-03f3ee17805413916"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.aws_ng",
            "aws_route_table.aws_private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f04458c32d27a6d7",
            "route_table_id": "rtb-04dd6f55153f9ccfc",
            "subnet_id": "subnet-093112c80f57d400b"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.aws_ng",
            "aws_route_table.aws_private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba7f1d87f74ae890",
            "route_table_id": "rtb-04dd6f55153f9ccfc",
            "subnet_id": "subnet-09e2f1b4128a0de03"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.aws_ng",
            "aws_route_table.aws_private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subassocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01abf047f2236e9b6",
            "route_table_id": "rtb-09eda2bf0e82c2c2e",
            "subnet_id": "subnet-029ac78b2cd8bd343"
          },
          "dependencies": [
            "aws_internet_gateway.aws_igw",
            "aws_route_table.aws_public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02447c917d462756b",
            "route_table_id": "rtb-09eda2bf0e82c2c2e",
            "subnet_id": "subnet-06d69804f0ff1c016"
          },
          "dependencies": [
            "aws_internet_gateway.aws_igw",
            "aws_route_table.aws_public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052a20f8287f45d7e",
            "route_table_id": "rtb-09eda2bf0e82c2c2e",
            "subnet_id": "subnet-03abab99db8d50bbc"
          },
          "dependencies": [
            "aws_internet_gateway.aws_igw",
            "aws_route_table.aws_public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680995745880:subnet/subnet-03f3ee17805413916",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f3ee17805413916",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680995745880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "private-subnet-us-east-1a"
            },
            "vpc_id": "vpc-086853d8f46dbb8fb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680995745880:subnet/subnet-093112c80f57d400b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093112c80f57d400b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680995745880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "private-subnet-us-east-1b"
            },
            "vpc_id": "vpc-086853d8f46dbb8fb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680995745880:subnet/subnet-09e2f1b4128a0de03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e2f1b4128a0de03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680995745880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-us-east-1c"
            },
            "tags_all": {
              "Name": "private-subnet-us-east-1c"
            },
            "vpc_id": "vpc-086853d8f46dbb8fb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680995745880:subnet/subnet-029ac78b2cd8bd343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029ac78b2cd8bd343",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680995745880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "private-subnet-us-east-1a"
            },
            "vpc_id": "vpc-086853d8f46dbb8fb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680995745880:subnet/subnet-06d69804f0ff1c016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d69804f0ff1c016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680995745880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "private-subnet-us-east-1b"
            },
            "vpc_id": "vpc-086853d8f46dbb8fb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680995745880:subnet/subnet-03abab99db8d50bbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03abab99db8d50bbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680995745880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-us-east-1c"
            },
            "tags_all": {
              "Name": "private-subnet-us-east-1c"
            },
            "vpc_id": "vpc-086853d8f46dbb8fb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680995745880:vpc/vpc-086853d8f46dbb8fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7503fb4746937c7",
            "default_route_table_id": "rtb-0993821b477a8eac7",
            "default_security_group_id": "sg-036af7e45554e280f",
            "dhcp_options_id": "dopt-02743d2b762c58437",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-086853d8f46dbb8fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0993821b477a8eac7",
            "owner_id": "680995745880",
            "tags": {
              "Name": "sandbox-vpc"
            },
            "tags_all": {
              "Name": "sandbox-vpc"
            }
          }
        }
      ]
    }
  ]
}